--- a/public/modules/duanzuposts/views/edit-duanzupost.client.view.html
+++ b/public/modules/duanzuposts/views/edit-duanzupost.client.view.html
@@ -37,7 +37,7 @@ input[type="number"]::-webkit-inner-spin-button {
     </div>
 
     <div class="col-md-12">
-        <form class="form-horizontal" class="form-horizontal" data-ng-submit="update()" novalidate>
+        <form name="duanzuPostForm" class="form-horizontal" class="form-horizontal" data-ng-submit="update()" novalidate>
             <fieldset>           
                <div class="form-group">
                     <label class="control-label" for="title">标题
@@ -62,8 +62,9 @@ input[type="number"]::-webkit-inner-spin-button {
 
 
                 <div class="form-group form-datepicker">
-                    <label class="control-label" for="startDate">起租日期
-                        <span class="requiredStar"> *</span>
+                    <label class="control-label" for="startDate">起租日期 {{duanzupost.startDate}} -- {{duanzupost.startDateLong}}
+<span class="requiredStar"> *</span>
+                    
                     </label>                 
                     <div ng-clock="">
                         <md-content>
@@ -121,7 +122,7 @@ input[type="number"]::-webkit-inner-spin-button {
 
                 <div class="form-group">
                     <label class="control-label" for="price">价格
-                        <span class="requiredStar"> *{{duanzupost.price}} </span>
+                        <span class="requiredStar"> * </span>
                     </label>                 
                     <div class="controls">
                         <input 
@@ -153,7 +154,7 @@ input[type="number"]::-webkit-inner-spin-button {
                     </label>
                     <div class="controls">
                         <input 
-                            type="text" 
+                            type="number" 
                             ng-minlength="10" 
                             ng-maxlength="13" 
                             name="phone" 
