--- a/public/modules/duanzuposts/css/duanzuposts.css
+++ b/public/modules/duanzuposts/css/duanzuposts.css
@@ -21,6 +21,22 @@
 }
 
 
+.rightPanelButton {
+	position: fixed; 
+	top: 40%; 
+	right:0; 
+    background-color:rgb(238,238,238); 
+    height:170px; 
+    width:30px;
+    transition: linear 0.2s
+}
+
+.rightPanelButton:hover{
+
+    background-color:#DDDDDD; 
+     transition: linear 0.2s
+   
+}
 
 /*.listSearchBar.ng-valid.ng-dirty {
 	border-color:#DFDFDF;
