--- a/public/modules/duanzuposts/views/list-duanzuposts.client.view.html
+++ b/public/modules/duanzuposts/views/list-duanzuposts.client.view.html
@@ -2,6 +2,11 @@
 <link ref="stylesheet" href="module/duanzuposts/css/duanzuposts.css">
 
 <section data-ng-controller="DuanzupostsController" data-ng-init="find()">
+    <!-- ng-hide="isOpenRight()" -->
+        <div class="rightPanelButton" ng-click="toggleRight()" > 
+            <p style="position: absolute; top:40%;left:50%"><</p>
+        </div>
+
     <div class="page-header">
         <h1>招租信息一览
 
@@ -50,7 +55,37 @@
             </tbody>
             
  
-        </table><div style="text-align:center">
+        </table>
+        
+        <section >
+
+    <md-content >
+
+
+    </md-content>
+
+    <md-sidenav class="md-sidenav-right md-whiteframe-z2" md-component-id="right">
+
+      <md-toolbar class="md-theme-light">
+        <h1 class="md-toolbar-tools">Sidenav Right</h1>
+      </md-toolbar>
+      <md-content layout-padding="">
+        <form>
+          <md-input-container>
+            <label for="testInput">Test input</label>
+            <input type="text" id="testInput" ng-model="data" md-autofocus="">
+          </md-input-container>
+        </form>
+        <md-button ng-click="close()" class="md-primary">
+          Close Sidenav Right
+        </md-button>
+      </md-content>
+
+    </md-sidenav>
+
+  </section>
+
+        <div style="text-align:center">
     <uib-pagination items-per-page="itemsPerPage" max-size="maxSize" total-items="totalItems" ng-model="currentPage" ng-change="pageChanged()"></uib-pagination></div>
     </div>
     
